# ChangeLog for sys-kernel/sparc-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/sparc-sources/ChangeLog,v 1.70 2004/12/03 02:11:12 joker Exp $

  02 Dec 2004; Christian Birchinger <joker@gentoo.org> :
  Security fix for CAN-2004-1074 (Bug #72452).
  Added a sparc64 smbfs fix.

  27 Nov 2004; Christian Birchinger <joker@gentoo.org>
  -files/gentoo-sources-2.4.27-binfmt_elf.patch,
  -files/use-pte_alloc_one_fast-r1.patch, -sparc-sources-2.4.27-r1.ebuild,
  -sparc-sources-2.4.27-r2.ebuild, -sparc-sources-2.4.27-r3.ebuild,
  -sparc-sources-2.4.27.ebuild:
  Removed old version

  25 Nov 2004; Christian Birchinger <joker@gentoo.org>
  sparc-sources-2.4.28.ebuild:
  Marked stable

*sparc-sources-2.4.28 (23 Nov 2004)

  23 Nov 2004; Christian Birchinger <joker@gentoo.org>
  +sparc-sources-2.4.28.ebuild:
  Version bump and squashfs 2.0 included

*sparc-sources-2.4.27-r3 (12 Nov 2004)

  12 Nov 2004; Christian Birchinger <joker@gentoo.org>
  +files/gentoo-sources-2.4.27-binfmt_elf.patch,
  +sparc-sources-2.4.27-r3.ebuild:
  Added a security fix for the Linux kernel binfmt_elf loader vulnerabilities

*sparc-sources-2.4.27-r2 (10 Nov 2004)

  10 Nov 2004; Christian Birchinger <joker@gentoo.org>
  +sparc-sources-2.4.27-r2.ebuild:
  Added a security fix for CAN-2004-0814 and a patch for the XDR NFS3 hole

*sparc-sources-2.4.27-r1 (11 Aug 2004)

  11 Aug 2004; Christian Birchinger <joker@gentoo.org>
  +files/use-pte_alloc_one_fast-r1.patch, +sparc-sources-2.4.27-r1.ebuild:
  Updated version with new use-pte_alloc_one_fast-r1.patch for sparc32 systems
  and a security fix for the cmdline leak.

  11 Aug 2004; Christian Birchinger <joker@gentoo.org>
  sparc-sources-2.4.27.ebuild:
  Marked stable

*sparc-sources-2.4.27 (09 Aug 2004)

  09 Aug 2004; Christian Birchinger <joker@gentoo.org>
  +sparc-sources-2.4.27.ebuild:
  Version bump

*sparc-sources-2.4.26-r4 (16 Jul 2004)
