@@ -1,8 +1,10 @@
-MD5 e958d5e0e47d7ec959c2c65587567750 ChangeLog 11918
+MD5 ad99e34c8f2161eab979e4c98e507dc0 ChangeLog 12135
 MD5 6706a601c155869440dcb544e3759a04 metadata.xml 381
 MD5 1a1ce2e743460d535bacf776ff5210c6 sparc-sources-2.4.28-r1.ebuild 2196
+MD5 40d3bbcc0a1629f1facc3c1b840a0328 sparc-sources-2.4.28-r2.ebuild 2197
 MD5 41d2f5b33c43ebbd36608920b3e670dd sparc-sources-2.4.28.ebuild 2193
 MD5 8100ed8276f69a4b404939a5570ee0d0 files/digest-sparc-sources-2.4.28-r1 143
+MD5 ae7509dcd16fac1bc6c6f42cc821b16b files/digest-sparc-sources-2.4.28-r2 143
 MD5 9e5e031b4149825faa227a3fc3969ef5 files/digest-sparc-sources-2.4.28 140
 MD5 935f3a9c9a5209ad79a0cdbf9ca4b610 files/U1-hme-lockup.patch 263
 MD5 387e70ce7c98618810dea0f521df76eb files/generate-asm-sparc 1661
